# elipdotter

./: Cargo.toml  README.md  todo.md
.github/workflows/: main.yml
src/: index.rs  lib.rs  proximity.rs  query.rs  set.rs
tests/: lib.rs
