[package]
name = "elipdotter"
version = "0.1.1"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "Embeddable full text search engine"
readme = "README.md"
repository = "https://github.com/Icelk/elipdotter/"
license = "LGPL-3.0-or-later"
keywords = ["search", "search-engine", "fulltext"]
categories = ["algorithms", "data-structures"]

[dependencies]
iter-set = "2.0.2"
strsim = "0.10.0"
